@@feat(plugin): P2 四项收尾 — PluginState状态机/PluginContext共享数据/PluginPackage工具/Actuator集成
P2-3: PluginState 独立枚举 + 状态转换规则（DISABLED/CRATED/INITIALIZED/STARTED/STOPPED/FAILED）
P2-4: PluginContext 接口 + DefaultPluginContext 实现（共享数据/事件发布/状态管理）
P2-5: PluginPackage 工具类（extractManifest/calculateChecksum/isValidPluginId/extractExtensionClasses）
P2-1: PluginHealthIndicator + PluginEndpoint Actuator 集成

测试: framework-plugin 98 tests, framework-boot-autoconfigure 27 tests, BUILD SUCCESS